--- a/client/index.html
+++ b/client/index.html
@@ -10,7 +10,11 @@
   </head>
   <body>
     <div ng-controller="HomeController">
-      <react-component name="CkoGrid" props="info" watch-depth="reference"/>
+      <react-component
+        name="CkoGrid"
+        props="info"
+        watch-depth="reference"
+      />
     </div>
   </body>
 </html>
